--- a/templates/web/secciones/historico.html
+++ b/templates/web/secciones/historico.html
@@ -6,18 +6,18 @@
 {% block sencondarymenu %}
     <ul class="secondary-nav-menu">
         <li class="active">
-            <a href="/historico/historicos/1" id="modal-link">
+            <a href="/historico/historicos/1">
                 <i class="icon-calendar"></i> Diario
             </a>
         </li>
         <li>
-            <a href="/historico/historicos/2" id="modal-link">
+            <a href="/historico/historicos/2">
                 <i class="icon-calendar"></i> Semanal
             </a>
         </li>
 
         <li>
-            <a href="/historico/historicos/3" id="modal-link">
+            <a href="/historico/historicos/3">
                 <i class="icon-calendar"></i> Mensual
             </a>
         </li>
