--- a/templates/web/secciones/lecturas.html
+++ b/templates/web/secciones/lecturas.html
@@ -12,7 +12,7 @@
         </li>
 
         <li>
-            <a href="/lecturas/ultimas/7" id="modal-link">
+            <a href="/lecturas/ultimas/7">
                 <i class="icon-list-alt"></i> Ultima Semana
             </a>
         </li>
