--- a/templates/web/secciones/panelcontrol.html
+++ b/templates/web/secciones/panelcontrol.html
@@ -12,7 +12,7 @@
         </li>
 
         <li>
-            <a href="/panelcontrol/alarmas" id="modal-link">
+            <a href="/panelcontrol/alarmas">
                 <i class="icon-random"></i> Alarmas
             </a>
         </li>
