--- a/templates/base/layout.html
+++ b/templates/base/layout.html
@@ -34,21 +34,24 @@
             </div>
         </div>
     </div>
+
         <div id="modal" class="black-box modal hide fade">
             <div class="modal-header tab-header">
                 <button type="button" class="close" data-dismiss="modal">×</button>
-                <span></span>
+                <span>{% block titulomodal %} {% endblock %}</span>
             </div>
             <div class="modal-body separator">
-
+                {% block modal %}
+                {% endblock %}
             </div>
             <div class="modal-footer">
                 <div class="inner-well">
-                    <a class="button mini rounded light-gray" data-dismiss="modal">Close</a>
-                    <a class="button mini rounded blue">Save changes</a>
+                    <a class="button mini rounded light-gray" data-dismiss="modal">Salir</a>
+                    <a class="button mini rounded blue">Aceptar</a>
                 </div>
             </div>
         </div>
+
         <div id="modal-gallery" class="black-box modal modal-gallery hide fade">
             <div class="modal-header tab-header">
                 <button type="button" class="close" data-dismiss="modal">×</button>
@@ -242,7 +245,7 @@
         <div class="container">
             <div class="row" id="notifications-wrapper">
                 <div id="notifications" class="{{ bootstrapPositionClass }} notifications animated">
-                    <div id="dismiss-all" class="dismiss-all button blue">Dismiss all</div>
+                    <div id="dismiss-all" class="dismiss-all button blue">Limpiar</div>
                     <div id="content">
                         <div id="notes"></div>
                     </div>
@@ -251,10 +254,13 @@
         </div>
     </script>
     <script type="text/javascript" src="{{ STATIC_URL }}javascripts/application.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/base/weblogger.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}javascripts/prettify.js"></script>
     <link rel=stylesheet type=text/css media=screen  href="{{ STATIC_URL }}stylesheets/prettify.css">
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.formset.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/grafico_estadistica.js"></script>
+    {% block foot %}
+    {% endblock %}
     <script type="text/javascript">
         prettyPrint()
         {% block scriptfoot %}
