--- a/templates/web/secciones/general.html
+++ b/templates/web/secciones/general.html
@@ -12,12 +12,12 @@
     </li>
 
     <li>
-        <a href="/general/configuracion" id="modal-link">
+        <a href="/general/configuracion">
             <i class="icon-wrench"></i> Configuracion
         </a>
     </li>
     <li>
-        <a href="/general/ptsmedidas" id="modal-link">
+        <a href="/general/ptsmedidas">
             <i class="icon-signal"></i> Puntos Medidas
         </a>
     </li>
