--- a/templates/web/secciones/panelcontrol/alarmas.html
+++ b/templates/web/secciones/panelcontrol/alarmas.html
@@ -1,54 +1,6 @@
 {% extends "web/secciones/panelcontrol.html" %}
 {% block head %}
-    <script type="text/javascript" src="{{ STATIC_URL }}javascripts/jquery172.js"></script>
-    <script type="text/javascript">
-    $(document).ready(function()
-    {
-        $('#sensibilidad').hide()
 
-        $('#id_mensajes tbody tr').formset({
-                    prefix: 'mensajes'
-                });
-
-
-        new Notifications({
-                container: $("body"),
-                bootstrapPositionClass: "span6 offset3"
-            });
-
-
-        var tipo = $('#id_cabalarma-tipo').val()
-        if(tipo==1)
-        {
-            $('#id_cabalarma-consigna').attr("disabled","disabled");
-            $('#horarios').hide()
-            $('#sensibilidad').show()
-
-        }
-
-        $('#id_cabalarma-tipo').change(function(){
-           var etiq = $(this).val()
-
-           if(etiq=="1")
-           {
-
-               $('#id_cabalarma-consigna').attr("disabled","disabled");
-               $('#horarios').hide()
-               $('#sensibilidad').show()
-           }
-           else
-           {
-               $('#id_cabalarma-consigna').removeAttr('disabled');
-               $('#horarios').show()
-               $('sensibilidad').hide()
-           }
-
-
-        });
-
-    });
-
-    </script>
  <style type="text/css">
         .add-row {
             padding-left:18px;
@@ -114,6 +66,7 @@
                                 <thead>
                                     <th>
                                     {{ form_cab.descripcion.label }}
+
                                     </th>
                                     <th>
                                         {{ form_cab.habilitar.label}}
@@ -121,7 +74,8 @@
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td>{{ form_cab.descripcion }}</td>
+
+                                        <td>{{ form_cab.descripcion }} {{ form_cab.descripcion.errors }}</td>
                                         <td>{{ form_cab.habilitar }}</td>
                                     </tr>
                                 <tbody>
@@ -144,9 +98,9 @@
 
                             <tr id="{{ form.prefix }}-row" >
                             <td class="hide">{{ form_cab.id }}</td>
-                                    <td>{{ form_cab.tipo }}</td>
-                                    <td>{{ form_cab.consigna }}</td>
-                                    <td>{{ form_cab.idcomsumos }}</td>
+                                    <td>{{ form_cab.tipo }}{{ form_cab.tipo.errors }}</td>
+                                    <td>{{ form_cab.consigna }}{{ form_cab.consigna.errors }}</td>
+                                    <td>{{ form_cab.idcomsumos }}{{ form_cab.idcomsumos.errors }}</td>
                             </tr>
                             </tbody>
                         </table>
@@ -179,7 +133,7 @@
                             </thead>
                             <tbody>
                             <tr >
-                                <td>{{ form_cab.sensibilidad }}</td>
+                                <td>{{ form_cab.sensibilidad }}{{ form_cab.sensibilidad.errors }}</td>
                             </tr>
                             </tbody>
                         </table>
@@ -199,8 +153,8 @@
                                 <tr id="{{ obj.prefix }}-row">
                                     <td class="hide">{{ obj.id }}</td>
                                     <td>{{ obj.email_destino1 }}
-                                        {{ obj.email_destino1.error }}</td>
-                                    <td>{{ obj.cuerpomensaje }}</td>
+                                        {{ obj.email_destino1.errors }}</td>
+                                    <td>{{ obj.cuerpomensaje }}{{ obj.curpomensaje.errors }}</td>
                                     <td>{{ obj.DELETE }}</td>
                                 </tr>
                             {% endfor %}
@@ -219,4 +173,7 @@
         </div>
     </div>
 
+{% endblock %}
+{% block foot %}
+<script type="text/javascript" src="{{ STATIC_URL}}js/web/secciones/panelcontrol/alarmas.js"></script>
 {% endblock %}
