Procedimiento de volcado de datos email

--- a/templates/web/secciones/general.html
+++ b/templates/web/secciones/general.html
@@ -21,5 +21,10 @@
             <i class="icon-signal"></i> Puntos Medidas
         </a>
     </li>
+    <li>
+        <a href="/general/mantenimiento">
+            <i class="icon-signal"></i> Mantenimiento
+        </a>
+    </li>
 </ul>
 {% endblock %}
